Ultimo commit - Cambios cuadernos y README

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Proyecto 2 — Optimización de carga de datos \n",
-    "**Objetivo:** comparar **Pandas** vs **PyTorch DataLoader** para cargar `nlp_prueba_cc0c2_large.csv` (~10000 oraciones), midiendo **tiempo por epoch** y **RAM** en:\n",
+    "**Objetivo:** comparar **Pandas** vs **PyTorch DataLoader** para cargar `nlp_prueba_cc0c2_large.csv` (~10000 oraciones), midiendo **tiempo** y **RAM** en:\n",
     "1) Pandas in-memory\n",
     "2) Pandas eficientes (chunk)\n",
     "3) DataLoader + Dataset\n",
@@ -761,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
